--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qatu</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Stack+Sans+Notch:wght@200..700&family=Stack+Sans+Text:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <img> 
+      <div id="logo">
+        <img src="./assets/logo-qatu-rojo.png" alt="Logotipo Qatu" />
+      </div>
+      <div id="login">
+        <button class="btn-login" onclick="window.location.href='login.html'">
+          Iniciar Sesión
+        </button>
+      </div>
     </header>
-</body>
+    <nav>
+      <div class="barra-navegacion">
+        <ul>
+          <li>Categorías</li>
+          <li>Buscar</li>
+          <li>Ofertas</li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
