--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
 
     <div id="notification" class="notification"></div>
 
-    <script src="app.ts"></script>
+    <script src="app.js"></script>
 </body>
 </html>
