--- a/index.html
+++ b/index.html
@@ -1,98 +1,134 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qatu</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <div class="auth-card">
-            <div class="logo-container">
-                <img src="assets/qatu-Photoroom.png" alt="Qatu Logo" class="logo">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Qatu - Marketplace</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Stack+Sans+Notch:wght@200..700&family=Stack+Sans+Text:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div id="logo">
+        <img src="./assets/logo-qatu-rojo.png" alt="Logotipo Qatu" />
+      </div>
+      <div id="login">
+        <button class="btn-login" onclick="window.location.href='login.html'">
+          Iniciar Sesión
+        </button>
+      </div>
+    </header>
+    
+    <nav>
+      <div class="barra-navegacion">
+        <ul>
+          <li class="dropdown">
+            Categorías
+            <ul class="dropdown-menu">
+              <li><a href="#">Electrónicos</a></li>
+              <li><a href="#">Hogar</a></li>
+              <li><a href="#">Ropa</a></li>
+              <li><a href="#">Belleza</a></li>
+              <li><a href="#">Deportes</a></li>
+              <li><a href="#">Libros</a></li>
+              <li><a href="#">Juguetes</a></li>
+              <li><a href="#">Alimentos</a></li>
+            </ul>
+          </li>
+          <li class="buscar">
+            <span class="buscar-texto">Buscar</span>
+            <input
+              type="text"
+              class="buscar-input"
+              placeholder="Buscar productos..."
+            />
+          </li>
+          <li class="ofertas">Ofertas</li>
+        </ul>
+      </div>
+    </nav>
+    
+    <section class="productos-recientes">
+      <h2>Productos Recientes</h2>
+      <div class="carrusel-container">
+        <button class="carrusel-btn prev" onclick="moverCarrusel(-1)">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="#E43636"
+          >
+            <path
+              d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"
+            />
+          </svg>
+        </button>
+        <div class="carrusel-wrapper">
+          <div class="carrusel">
+            <div class="producto-card">
+              <img src="https://via.placeholder.com/200" alt="Producto 1" />
+              <h3>Producto 1</h3>
+              <p class="precio">$99.99</p>
             </div>
-
-            <!-- Login Form -->
-            <div id="loginForm" class="form-container active">
-                <h2>Iniciar Sesión</h2>
-                <form id="loginFormElement">
-                    <div class="form-group">
-                        <label for="loginEmail">Correo electrónico</label>
-                        <input type="email" id="loginEmail" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="loginPassword">Contraseña</label>
-                        <input type="password" id="loginPassword" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-                </form>
-                <p class="form-switch">¿No tienes cuenta? <a href="#" id="showRegister">Regístrate aquí</a></p>
+            <div class="producto-card">
+              <img src="https://via.placeholder.com/200" alt="Producto 2" />
+              <h3>Producto 2</h3>
+              <p class="precio">$149.99</p>
             </div>
-
-            <!-- Register Form -->
-            <div id="registerForm" class="form-container">
-                <h2>Registro de Usuario</h2>
-                <form id="registerFormElement">
-                    <div class="form-group">
-                        <label for="registerName">Nombre completo</label>
-                        <input type="text" id="registerName" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerEmail">Correo electrónico</label>
-                        <input type="email" id="registerEmail" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerPassword">Contraseña</label>
-                        <input type="password" id="registerPassword" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerConfirmPassword">Confirmar contraseña</label>
-                        <input type="password" id="registerConfirmPassword" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerRole">Tipo de usuario</label>
-                        <select id="registerRole" required>
-                            <option value="">Selecciona una opción</option>
-                            <option value="comprador">Comprador</option>
-                            <option value="vendedor">Vendedor</option>
-                            <option value="admin">Administrador</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Registrarse</button>
-                </form>
-                <p class="form-switch">¿Ya tienes cuenta? <a href="#" id="showLogin">Inicia sesión aquí</a></p>
+            <div class="producto-card">
+              <img src="https://via.placeholder.com/200" alt="Producto 3" />
+              <h3>Producto 3</h3>
+              <p class="precio">$79.99</p>
             </div>
-
-            <!-- Verification Form -->
-            <div id="verificationForm" class="form-container">
-                <h2>Verificación de Usuario</h2>
-                <p class="verification-message">Hemos enviado un código de verificación a tu correo electrónico.</p>
-                <form id="verificationFormElement">
-                    <div class="form-group">
-                        <label for="verificationCode">Código de verificación</label>
-                        <input type="text" id="verificationCode" maxlength="6" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Verificar</button>
-                </form>
-                <p class="form-switch"><a href="#" id="resendCode">Reenviar código</a></p>
+            <div class="producto-card">
+              <img src="https://via.placeholder.com/200" alt="Producto 4" />
+              <h3>Producto 4</h3>
+              <p class="precio">$199.99</p>
             </div>
-
-            <!-- Dashboard (after login) -->
-            <div id="dashboard" class="form-container">
-                <h2>Bienvenido, <span id="userName"></span>!</h2>
-                <div class="dashboard-info">
-                    <p><strong>Rol:</strong> <span id="userRole"></span></p>
-                    <p><strong>Email:</strong> <span id="userEmail"></span></p>
-                    <p><strong>Estado:</strong> <span id="userStatus" class="status-badge"></span></p>
-                </div>
-                <button class="btn btn-secondary" id="logoutBtn">Cerrar Sesión</button>
+            <div class="producto-card">
+              <img src="https://via.placeholder.com/200" alt="Producto 5" />
+              <h3>Producto 5</h3>
+              <p class="precio">$129.99</p>
             </div>
+            <div class="producto-card">
+              <img src="https://via.placeholder.com/200" alt="Producto 6" />
+              <h3>Producto 6</h3>
+              <p class="precio">$89.99</p>
+            </div>
+            <div class="producto-card">
+              <img src="https://via.placeholder.com/200" alt="Producto 7" />
+              <h3>Producto 7</h3>
+              <p class="precio">$159.99</p>
+            </div>
+            <div class="producto-card">
+              <img src="https://via.placeholder.com/200" alt="Producto 8" />
+              <h3>Producto 8</h3>
+              <p class="precio">$109.99</p>
+            </div>
+          </div>
         </div>
-    </div>
+        <button class="carrusel-btn next" onclick="moverCarrusel(1)">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="#E43636"
+          >
+            <path
+              d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"
+            />
+          </svg>
+        </button>
+      </div>
+    </section>
 
-    <div id="notification" class="notification"></div>
-
-    <script src="app.js"></script>
-</body>
+    <script src="dashboard.js"></script>
+  </body>
 </html>
