--- a/registro.html
+++ b/registro.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro - Qatu</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./assets/isotipo-qatu-svg.svg"
+    />
     <link rel="stylesheet" href="registro.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,20 +23,22 @@
     </a>
     <header>
       <div id="logo">
-        <img src="./assets/isotipo-qatu-blanco.png" alt="Logotipo Qatu" />
+        <img src="./assets/isotipo-qatu-svg.svg" alt="Logotipo Qatu" />
       </div>
     </header>
     <main>
       <div class="registro-container">
         <h1>Registro</h1>
         <form class="registro-form">
-          <div class="form-group">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" required />
-          </div>
-          <div class="form-group">
-            <label for="apellido">Apellido</label>
-            <input type="text" id="apellido" name="apellido" required />
+          <div class="form-row">
+            <div class="form-group">
+              <label for="nombre">Nombre</label>
+              <input type="text" id="nombre" name="nombre" required />
+            </div>
+            <div class="form-group">
+              <label for="apellido">Apellido</label>
+              <input type="text" id="apellido" name="apellido" required />
+            </div>
           </div>
           <div class="form-group">
             <label for="email">Correo Electrónico</label>
