logo qatu en dashboard arreglado

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div id="logo">
-        <img src="./assets/logo-qatu-rojo.png" alt="Logotipo Qatu" />
+        <img src="./assets/qatu.svg" alt="Logotipo Qatu" />
       </div>
       <div id="login">
         <button class="btn-login" onclick="window.location.href='login.html'">
