Arreglo de verificacion de codigo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
           Iniciar Sesión
         </button>
       </div>
+      <div id="user-info" style="display: none;">
+        <span class="user-greeting">Hola, <strong id="user-name-display"></strong></span>
+        <button class="btn-logout" id="logout-btn">Cerrar Sesión</button>
+      </div>
     </header>
     
     <nav>
