--- a/registro.html
+++ b/registro.html
@@ -50,6 +50,7 @@
                             <option value="">Selecciona una opción</option>
                             <option value="comprador">Comprador</option>
                             <option value="vendedor">Vendedor</option>
+                            <option value="admin">Administrador</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary">Registrarse</button>
